correccion cuervo y fde constructora

--- a/JuanCuervo/story-resize.html
+++ b/JuanCuervo/story-resize.html
@@ -400,7 +400,7 @@ s
 
                 <span class="bzm_text_title  bzm_text_medium" style="display:block; margin-top:-15px; padding-top:30px; padding-bottom:30px;">
                         <a href="https://puntosmedios.com/" style="display:block; margin-left:-10px;" target="_blank">
-                            <div class="img-cincoseis" style="background-image:url(https://i.imgur.com/aynimT9.png); margin-bottom:-10px; width: 320px;"></div>
+                            <div class="img-news" style="background-image:url(https://i.imgur.com/QQ5ISjW.png); margin-bottom:-10px; width: 320px;"></div>
                         </a>
                     </span> 
                    
@@ -410,7 +410,7 @@ s
 
                  <span class="bzm_text_title  bzm_text_medium" style="display:block; margin-top:-15px; padding-top:30px; padding-bottom:30px;">
                         <a href="https://puntosmedios.com/" style="display:block; margin-left:-10px;" target="_blank">
-                            <div class="img-cincoseis" style="background-image:url(https://i.imgur.com/d54XUNN.png); margin-bottom:-10px; width: 320px;"></div>
+                            <div class="img-cincoseis" style="background-image:url(https://i.imgur.com/1GCbafC.png); margin-bottom:-10px; width: 320px;"></div>
                         </a>
                     </span> 
                    
