--- a/constructora/Cube.html
+++ b/constructora/Cube.html
@@ -947,7 +947,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i5.i249.image.html:image/html-->
 <img id="i249" src="https://i.imgur.com/32Ks9oh.png"/>
 <!--#/#--><!--#i5.i283.text.html:text/html-->
-<div id="i283">Departamentos en San Angel  desde $6,700,00MXN</div>
+<div id="i283">Tu familia y tú os merecéis subir al siguiente nivel.</div>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#--><!--#i5.i253.image.html:image/html-->
@@ -969,7 +969,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i6.i243.image.html:image/html-->
 <img id="i243" src="https://i.imgur.com/32Ks9oh.png"/>
 <!--#/#--><!--#i6.i287.text.html:text/html-->
-<div id="i287">Departamentos en San Angel  desde $6,700,00MXN</div>
+<div id="i287">Con Alberca techada, Fitness Center, Sky Lounge...</div>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#--><!--#i6.i209.image.html:image/html-->
@@ -1322,7 +1322,7 @@ customName: false;
 /*#/#*//*#i249.i250.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i283.text.meta:text/meta*/
-name: Departamentos en San Angel  desde $6,700,00MXN; customName: false;
+name: Tu familia y tú os merecéis subir al siguiente nivel.; customName: false;
 /*#/#*//*#i283.i284.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i5.i95.shape.meta:shape/meta*/
@@ -1366,7 +1366,7 @@ customName: false;
 /*#/#*//*#i243.i244.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i287.text.meta:text/meta*/
-name: Departamentos en San Angel  desde $6,700,00MXN; customName: false;
+name: Con Alberca techada, Fitness Center, Sky Lounge...; customName: false;
 /*#/#*//*#i287.i288.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i6.i99.shape.meta:shape/meta*/
