--- a/constructora/fade.html
+++ b/constructora/fade.html
@@ -339,7 +339,7 @@
         </div>
         <div class="value_text"> 
             <span class="value_text_title value_text_bold">
-            Departamentos en Santa Fe desde $5,500,00MXN.
+            ¿Te gustaría vivir rodeado de naturaleza en pleno Santa Fe?
             </span>
             <br/>  
             <span class="value_text_light value_text_small" style="color:black;">
