--- a/constructora/slider.html
+++ b/constructora/slider.html
@@ -248,7 +248,7 @@
                     <div class="te-back"></div>
                 </div>
                 <div style="margin-top:18px; margin-left:0px; margin-right: 10px;">
-                    <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000000; font-size:15px; text-align:left;">En Sky Santa Fe  se disfruta desde lo más alto. Departamentos desde $5,500,00MXN </span> <img class="logo" style="margin-top: 10px;" src="https://i.imgur.com/UBExaoT.png" alt=""> </div>
+                    <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000000; font-size:17px; text-align:left;"> ¿Trabajas mucho?. Te mereces vivir al más alto nivel rodeado del mejor lujo.</span> <img class="logo" style="margin-top: 10px;" src="https://i.imgur.com/UBExaoT.png" alt=""> </div>
                 </div>
                 <div id="botones-para-compartir" style="display:inline;float:left;margin-top:15px;margin-left:7px;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://skysantafe.com.mx/" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/mJBNNLr.png" title="compartir en facebook" width="22" /></a><a class="shared" href="https://plus.google.com/share?url=https://skysantafe.com.mx/" target="_blank"> <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/dC7ka2p.png" title="compartir en google+" width="22" /></a><a class="shared" href="https://twitter.com/home?status=https://skysantafe.com.mx/" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/YN2Vf5g.png" title="compartir en twitter" width="22" /></a> </span></div>
             </div>
