--- a/constructora/fade2.html
+++ b/constructora/fade2.html
@@ -162,7 +162,7 @@
         }
 
         .sky2_text_small {
-            font-size: 95%;
+            font-size: 93%;
         }
 
         ul {
@@ -343,13 +343,13 @@
             <br/>  
             <span class="sky2_text_light sky2_text_small" style="color:black;">
                 <p style="margin-right:10px; text-align: justify; width: 90%; margin-top: 10px; line-height: 1.2em">
--En la zona más exclusiva de Mexico.<br>
--Área comercial con acceso desde Lobby.<br>
+-En la zona más <b> exclusiva de Mexico.</b><br>
+-<b>Área comercial</b> con acceso desde <b>Lobby.</b><br>
 -Restaurantes, tiendas de conveniencia y servicios.<br>
--Patio central de reserva natural.<br>
+-Patio central de <b>reserva natural.</b><br>
 -Iluminación natural.<br>
--Zona de esparcimiento con Wi-fi.<br>
--Cajones de estacionamiento.
+-Zona de esparcimiento con <b>Wi-fi.</b><br>
+-Cajones de <b>estacionamiento.</b>
 
 
                 </p> 
