--- a/Bimbo/fade-galega.html
+++ b/Bimbo/fade-galega.html
@@ -44,13 +44,13 @@
 
          .cta {
             position: absolute;
-            bottom: 85px;
-            width: 70px;
+            bottom: 75px;
+            width: 80px;
             line-height: 1.3em;
             z-index: 5;
-            margin-left: 48%;
-            left: -30px;
-            background-color: #217dfa;
+            margin-left: 100px;
+            
+            background-color: #04019B;
             padding: 5px;
             border-radius: 20px;
             text-align: center;
@@ -63,19 +63,19 @@
         }
 
         .corona .bzm_cover {
-            height: 150px
+            height: 160px
         }
 
         .corona .bg.cover-1 {
-            background-image: url(https://i.imgur.com/SCSoWVC.jpg)
+            background-image: url(https://i.imgur.com/QTZkFvI.jpg)
         }
 
         .corona .bg.cover-2 {
-            background-image: url(https://i.imgur.com/RgqvbuH.jpg)
+            background-image: url(https://i.imgur.com/Cill5o3.jpg)
         }
 
         .corona .bg.cover-3 {
-            background-image: url(https://i.imgur.com/p6G8ULj.jpg)
+            background-image: url(https://i.imgur.com/YOdTyZS.jpg)
         }
 
         .corona .bzm_cover.bzm_pos_tl {
@@ -108,7 +108,7 @@
             line-height: 1.1;
             color: #000;
             text-align: left;
-            margin-top: 10px;
+            margin-top: 20px;
             width: 99%;
             
         }
@@ -267,16 +267,16 @@
 
 <body class="corona" style="margin:0px;">
    <div class="bzm_wrapper carousel-wrapper size_300x250">
-        <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:80%; color: white;">Máis info</span></div>
-        <a href="https://sede.xunta.gal/detalle-procedemento?codtram=PR937A" style="display: block;" target="_blank">
+        <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:80%; color: white;">Saber más</span></div>
+        <a href="https://www.grupobimbo.com/es/hub/una-empresa-sustentable-por-un-planeta-mejor" style="display: block;" target="_blank">
             <div class="carousel-container">
                 <div class="bzm_cover bg cover-1 carousel-item1 item-1"></div>
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
-            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:14px;text-align:left;"> Es galeg@ ou descendente e retornaches? Solicita a túa axuda de 5.000 a 7.000€ para emprender!</span></div>
-            <div style="bottom:0px;height:40px;text-align:right ;margin-top:5px; margin-right: 5px;"> <img src="https://i.imgur.com/5qaaAMk.png" style="height:35px;margin-top:-3px;">
-                <div id="botones-para-compartir" style="display:inline;float:left;margin-top:-34px;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://sede.xunta.gal/detalle-procedemento?codtram=PR937A" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/aWe1A4G.png" title="compartir en facebook" width="22" /></a><a class="shared" href="https://plus.google.com/share?url=https://sede.xunta.gal/detalle-procedemento?codtram=PR937A" target="_blank"> <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/ct3Z8bp.png" title="compartir en google+" width="22" /></a><a class="shared" href="https://twitter.com/home?status=https://sede.xunta.gal/detalle-procedemento?codtram=PR937A" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/ecFOGYd.png" title="compartir en twitter" width="22" /></a> </span></div>
+            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:20px;text-align:left;">¿Sabes como funciona una empresa sustentable?</span></div>
+            <div style="bottom:0px;height:40px;text-align:right ;margin-top:5px; margin-right: 5px;"> <img src="https://i.imgur.com/SU2R2ue.png" style="height:33px;margin-top:-5px;">
+                <div id="botones-para-compartir" style="display:inline;float:left;margin-top:-29px;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.grupobimbo.com/es/hub/una-empresa-sustentable-por-un-planeta-mejor" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="23" src="https://i.imgur.com/6fRu590.png" title="compartir en facebook" width="23" /></a><a class="shared" href="https://plus.google.com/share?url=https://www.grupobimbo.com/es/hub/una-empresa-sustentable-por-un-planeta-mejor" target="_blank"> <img alt="compartir en google+" class="googlei" height="23" src="https://i.imgur.com/QN2PkjA.png" title="compartir en google+" width="23" /></a><a class="shared" href="https://twitter.com/home?status=https://www.grupobimbo.com/es/hub/una-empresa-sustentable-por-un-planeta-mejor" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="23" src="https://i.imgur.com/Beeft1x.png" title="compartir en twitter" width="23" /></a> </span></div>
             </div>
         </a>
     </div>
