--- a/Bimbo/slider.html
+++ b/Bimbo/slider.html
@@ -201,7 +201,7 @@
 </head>
 <body class="cannabis" style="margin:0px;">
 	 <div class="te-container">
-     <a href="https://nutriciongrupobimbo.com/mexico/recetas/s%C3%A1ndwiches" target="_blank">
+     <a href="https://nutriciongrupobimbo.com/mexico/content/s%C3%A1ndwich-de-pan-cero-cero-bimbo-estilo-california" target="_blank">
             <div id="te-wrapper" class="te-wrapper">
                <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:80%; color: white;">Saber más</span></div>
                 <div class="te-images"> <img src="https://i.imgur.com/hH3rpAU.jpg" alt="" /> <img src="https://i.imgur.com/JT55FHm.jpg" alt="" /> <img src="https://i.imgur.com/BR2zh3h.jpg" alt="" /> </div>
