--- a/Bimbo Race/SliderCDMX.html
+++ b/Bimbo Race/SliderCDMX.html
@@ -76,7 +76,7 @@
             line-height: 1.3em;
             z-index: 5;
             margin-left: 80px;
-            background-color: #263576;
+            background-color: #05264d;
             font-family: 'Lato', sans-serif;
             padding: 5px;
             border-radius: 20px;
