--- a/Bimbo Race/SliderCDMX300x600.html
+++ b/Bimbo Race/SliderCDMX300x600.html
@@ -90,7 +90,7 @@
             margin-top: 30px;
             margin-bottom: 15px;
             margin-left: 10px;
-            text-align: center;
+            text-align: left;
             width: 89%;
             font-family: Source Sans Pro
         }
@@ -278,7 +278,7 @@
                 </div>
                 <div style="padding-left: 5px;padding-top:2px;padding-right:5px;">
                     <div class="bzm_text">
-                        <span class="bzm_text_title  bzm_text_bold" style="color: black;line-height:1.1; font-size:25px; text-align: center; margin-left:-9px; margin-right:2px;">
+                        <span class="bzm_text_title  bzm_text_bold" style="color: black;line-height:1.1; font-size:25px; text-align: left; margin-left:0px; margin-right:2px;">
 						Corre el 23 de Septiembre en la carrera Global Energy Race Bimbo en CDMX. <br>
 						23 países en un día, 35 ciudades, 6 en México.
 						</span> <br>
