--- a/Bimbo Race/CubeCDMX.html
+++ b/Bimbo Race/CubeCDMX.html
@@ -470,7 +470,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#-->
 <!--#/#--><!--#css:common/css-->
 <style>
-/*#i2.cube.css:cube/base/css.1*/
+/*#visibility.css:visibility/globalcss*/
+.visibility-hidden, .visibility-hidden * {
+    visibility: hidden !important;
+}
+/*#/#*//*#i2.cube.css:cube/base/css.1*/
 #i2.shape-holder {
     position: absolute;
 
@@ -493,70 +497,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     overflow: hidden;
 }
 
-/*#/#*//*#i4.i20.shape.css:shape/base/css*/
-#i20 { background-color: #ffffff; opacity: 1;
-}
-/*#/#*//*#i20.i21.positioning.css:positioning/base/css.1*/
-#i20 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
-/*#/#*//*#i4.i14.text.css:text/base/css*/
-#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 15px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
-/*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
-#i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 231px; height: 67px;
-        -ms-transform: translate(-50%, -50%) translate(-24px, 86px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(-24px, 86px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(-24px, 86px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(-24px, 86px) rotate(0deg);
-}
-/*#/#*//*#i4.i130.image.css:image/base/css*/
-#i130 { opacity: 1; }
-/*#/#*//*#i130.i131.positioning.css:positioning/base/css.1*/
-#i130 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 160px;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
-/*#/#*//*#i4.i184.button.css:button/base/css*/
-#i184 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(5,38,77,1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 20px; border-color: rgba(5,38,77,1); border-width: 1px; margin:-1px; border-style: solid; }
-#i184:hover { opacity: 1; background-color: rgba(0,90,140, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
-#i184:active { opacity: 1; background-color: rgba(0,80,130, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
-/*#/#*//*#i184.i185.positioning.css:positioning/base/css.2*/
-#i184 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 116px; height: 30px;
-        -ms-transform: translate(0, 0) translate(92px, 145px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(92px, 145px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(92px, 145px) rotate(0deg);
-        transform: translate(0, 0) translate(92px, 145px) rotate(0deg);
-}
-/*#/#*//*#i4.i91.shape.css:shape/base/css*/
-#i91 { background-color: #dedede; opacity: 0.00;
-}
-/*#/#*//*#i177.i178.actions-clicktag.css:actions-clicktag/base/css.1*/
-#i91 { cursor: pointer; }
-/*#/#*//*#i91.i92.positioning.css:positioning/base/css.1*/
-#i91 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100.2%;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
-/*#/#*//*#i4.i212.image.css:image/base/css*/
-#i212 { opacity: 1; }
-/*#/#*//*#i212.i213.positioning.css:positioning/base/css.2*/
-#i212 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 45px; height: 45px;
-        -ms-transform: translate(0, 0) translate(249px, 200px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(249px, 200px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(249px, 200px) rotate(0deg);
-        transform: translate(0, 0) translate(249px, 200px) rotate(0deg);
-}
-/*#/#*//*#visibility.css:visibility/globalcss*/
-.visibility-hidden, .visibility-hidden * {
-    visibility: hidden !important;
-}
 /*#/#*//*#cube.css:cube/globalcss.1*/
 
 .transformation {
@@ -686,6 +626,66 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     background-color: #5AAAD2;
 }
 
+/*#/#*//*#i4.i20.shape.css:shape/base/css*/
+#i20 { background-color: #ffffff; opacity: 1;
+}
+/*#/#*//*#i20.i21.positioning.css:positioning/base/css.1*/
+#i20 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+}
+/*#/#*//*#i4.i14.text.css:text/base/css*/
+#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 19px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
+/*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
+#i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 231px; height: 67px;
+        -ms-transform: translate(-50%, -50%) translate(-24px, 90px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(-24px, 90px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(-24px, 90px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(-24px, 90px) rotate(0deg);
+}
+/*#/#*//*#i4.i130.image.css:image/base/css*/
+#i130 { opacity: 1; }
+/*#/#*//*#i130.i131.positioning.css:positioning/base/css.1*/
+#i130 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 160px;
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+}
+/*#/#*//*#i4.i184.button.css:button/base/css*/
+#i184 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(5,38,77,1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 20px; border-color: rgba(5,38,77,1); border-width: 1px; margin:-1px; border-style: solid; }
+#i184:hover { opacity: 1; background-color: rgba(0,90,140, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
+#i184:active { opacity: 1; background-color: rgba(0,80,130, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
+/*#/#*//*#i184.i185.positioning.css:positioning/base/css.2*/
+#i184 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 116px; height: 30px;
+        -ms-transform: translate(0, 0) translate(92px, 145px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(92px, 145px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(92px, 145px) rotate(0deg);
+        transform: translate(0, 0) translate(92px, 145px) rotate(0deg);
+}
+/*#/#*//*#i4.i91.shape.css:shape/base/css*/
+#i91 { background-color: #dedede; opacity: 0.00;
+}
+/*#/#*//*#i177.i178.actions-clicktag.css:actions-clicktag/base/css.1*/
+#i91 { cursor: pointer; }
+/*#/#*//*#i91.i92.positioning.css:positioning/base/css.1*/
+#i91 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100.2%;
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+}
+/*#/#*//*#i4.i212.image.css:image/base/css*/
+#i212 { opacity: 1; }
+/*#/#*//*#i212.i213.positioning.css:positioning/base/css.2*/
+#i212 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 45px; height: 45px;
+        -ms-transform: translate(0, 0) translate(249px, 200px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(249px, 200px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(249px, 200px) rotate(0deg);
+        transform: translate(0, 0) translate(249px, 200px) rotate(0deg);
+}
 /*#/#*//*#i50.i51.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i4 { cursor: pointer; }
 /*#/#*//*#i5.i30.shape.css:shape/base/css*/
@@ -727,15 +727,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(249px, 200px) rotate(0deg);
         transform: translate(0, 0) translate(249px, 200px) rotate(0deg);
 }
-/*#/#*//*#i5.i206.text.css:text/base/css*/
-#i206 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 15px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
-/*#/#*//*#i206.i207.positioning.css:positioning/base/css.1*/
-#i206 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 231px; height: 67px;
-        -ms-transform: translate(-50%, -50%) translate(-24px, 86px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(-24px, 86px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(-24px, 86px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(-24px, 86px) rotate(0deg);
-}
 /*#/#*//*#i5.i95.shape.css:shape/base/css*/
 #i95 { background-color: #dedede; opacity: 0.00;
 }
@@ -747,6 +738,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+}
+/*#/#*//*#i5.i214.text.css:text/base/css*/
+#i214 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 19px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
+/*#/#*//*#i214.i215.positioning.css:positioning/base/css.1*/
+#i214 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 231px; height: 67px;
+        -ms-transform: translate(-50%, -50%) translate(-24px, 90px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(-24px, 90px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(-24px, 90px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(-24px, 90px) rotate(0deg);
 }
 /*#/#*//*#i52.i53.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i5 { cursor: pointer; }
@@ -780,15 +780,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(92px, 145px) rotate(0deg);
         transform: translate(0, 0) translate(92px, 145px) rotate(0deg);
 }
-/*#/#*//*#i6.i208.text.css:text/base/css*/
-#i208 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 15px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
-/*#/#*//*#i208.i209.positioning.css:positioning/base/css.1*/
-#i208 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 231px; height: 67px;
-        -ms-transform: translate(-50%, -50%) translate(-24px, 86px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(-24px, 86px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(-24px, 86px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(-24px, 86px) rotate(0deg);
-}
 /*#/#*//*#i6.i210.image.css:image/base/css*/
 #i210 { opacity: 1; }
 /*#/#*//*#i210.i211.positioning.css:positioning/base/css.2*/
@@ -809,6 +800,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+}
+/*#/#*//*#i6.i216.text.css:text/base/css*/
+#i216 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 19px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
+/*#/#*//*#i216.i217.positioning.css:positioning/base/css.1*/
+#i216 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 231px; height: 67px;
+        -ms-transform: translate(-50%, -50%) translate(-24px, 90px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(-24px, 90px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(-24px, 90px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(-24px, 90px) rotate(0deg);
 }
 /*#/#*//*#i54.i55.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i6 { cursor: pointer; }
@@ -832,7 +832,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i14.text.html:text/html-->
-<div id="i14">Corre el 23 de Septiembre en la carrera Global Energy Race Bimbo en CDMX. 23 países en un día, 35 ciudades, 6 en México.</div>
+<div id="i14">Corre el 23 de Septiembre 
+en la carrera Global Energy Race Bimbo en CDMX.</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/qUnJfYK.png"/>
 <!--#/#--><!--#i4.i184.button.html:button/html-->
@@ -853,10 +854,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <button id="i188">Inscríbete Ahora</button>
 <!--#/#--><!--#i5.i192.image.html:image/html-->
 <img id="i192" src="https://i.imgur.com/RtLooNE.jpg"/>
-<!--#/#--><!--#i5.i206.text.html:text/html-->
-<div id="i206">Corre el 23 de Septiembre en la carrera Global Energy Race Bimbo en CDMX. 23 países en un día, 35 ciudades, 6 en México.</div>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
+<!--#/#--><!--#i5.i214.text.html:text/html-->
+<div id="i214">Corre el 23 de Septiembre 
+en la carrera Global Energy Race Bimbo en CDMX.</div>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i2.i6.cube-panel.html:cube-panel/html-->
@@ -867,12 +869,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i194" src="https://i.imgur.com/Du5qKc3.png"/>
 <!--#/#--><!--#i6.i196.button.html:button/html-->
 <button id="i196">Inscríbete Ahora</button>
-<!--#/#--><!--#i6.i208.text.html:text/html-->
-<div id="i208">Corre el 23 de Septiembre en la carrera Global Energy Race Bimbo en CDMX. 23 países en un día, 35 ciudades, 6 en México.</div>
 <!--#/#--><!--#i6.i210.image.html:image/html-->
 <img id="i210" src="https://i.imgur.com/RtLooNE.jpg"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
+<!--#/#--><!--#i6.i216.text.html:text/html-->
+<div id="i216">Corre el 23 de Septiembre 
+en la carrera Global Energy Race Bimbo en CDMX.</div>
 <!--#/#-->
 </div>
 <!--#/#-->
@@ -1045,13 +1048,13 @@ name: RtLooNE.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i192.i193.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i5.i206.text.meta:text/meta*/
-name: Texto; customName: 1;
-/*#/#*//*#i206.i207.positioning.meta:positioning/meta.1*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i5.i95.shape.meta:shape/meta*/
 name: Link;
 /*#/#*//*#i95.i96.positioning.meta:positioning/meta.1*/
+data: /*!*/{}/*!*/;
+/*#/#*//*#i5.i214.text.meta:text/meta*/
+name: Texto; customName: 1;
+/*#/#*//*#i214.i215.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i2.i6.cube-panel.meta:cube-panel/meta*/
     name: Cube Panel 3;
@@ -1069,10 +1072,6 @@ name: Inscríbete Ahora;
 customName: false;
 /*#/#*//*#i196.i197.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i6.i208.text.meta:text/meta*/
-name: Texto; customName: 1;
-/*#/#*//*#i208.i209.positioning.meta:positioning/meta.1*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i6.i210.image.meta:image/meta*/
 name: RtLooNE.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
@@ -1081,6 +1080,10 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i99.shape.meta:shape/meta*/
 name: Link;
 /*#/#*//*#i99.i100.positioning.meta:positioning/meta.1*/
+data: /*!*/{}/*!*/;
+/*#/#*//*#i6.i216.text.meta:text/meta*/
+name: Texto; customName: 1;
+/*#/#*//*#i216.i217.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
