--- a/ADIDAS/Cube.html
+++ b/ADIDAS/Cube.html
@@ -1148,7 +1148,8 @@ if ('click' === 'click') {
 }
 /*#/#*//*#i5.i52.actions.js:actions/base/js*/
 /* Name: On Click; */
-*//*#i6.i200.image.js:image/base/js*/
+
+/*#/#*//*#i6.i200.image.js:image/base/js*/
 
 /*#/#*//*#i202.i203.positioning.js:positioning/base/js.2*/
 bmShow('i202');
