--- a/Narcos mexico/fade.html
+++ b/Narcos mexico/fade.html
@@ -311,7 +311,7 @@
 
 <body class="xcaret2">
     <div class="xcaret2_wrapper carousel-wrapper size_320x480" style="border: 1px solid #c5c5c5" id="cta" onclick="openUrl();">
-        <a href="https://www.xcaretexperiencias.com/tour-xcaret.php" style="display: block;" target="block">
+        <a href="https://www.cinemascomics.com/narcos-mexico-temporada-4-netflix/" style="display: block;" target="block">
         <div class="xcaret2_cover bg cover-1 carousel-item item-1">
             <div class="xcaret2_logo"><span class="xcaret2_text_bold xcaret2_text_small"></span></div>
         </div>
