--- a/Narcos mexico/video.html
+++ b/Narcos mexico/video.html
@@ -270,7 +270,7 @@
                ¿No te estremeces al escuchar esta melodía?
             </span>
             <span class="tgx_text_light tgx_text_small" style="color:black;">
-                <p style="margin-top: -2px; font-size: 15px;"> <b>La temporada 4 de Narcos, Narcos: México,</b> ya tiene nuevo tráiler y fecha de estreno. Tras las primeras tres temporadas en Colombia, la serie cambia de escenario para centrarse en los orígenes del narcotráfico en este país americano.  </p>
+                <p style="margin-top: -2px; font-size: 15px;"> <b>La temporada 4 de Narcos: México,</b> ya tiene nuevo tráiler y fecha de estreno. Tras las primeras tres temporadas en Colombia, la serie cambia de escenario para centrarse en los orígenes del narcotráfico en este país americano.  </p>
             </span>
 
             
