--- a/Berlitz Septiembre/FadeKids.html
+++ b/Berlitz Septiembre/FadeKids.html
@@ -341,7 +341,8 @@
         </div>
         <div class="tgx_text"> 
             <span class="tgx_text_title tgx_text_bold">
-               Cuando tus hijos aprenden inglés tienen más oportunidades para el futuro. ¡Impúlsalos!
+               Cuando tus hijos aprenden inglés tienen más oportunidades para el futuro. 
+               ¡Impúlsalos!
             </span>
             <br/>  
             
