--- a/Berlitz Septiembre/CubeAdultos.html
+++ b/Berlitz Septiembre/CubeAdultos.html
@@ -512,15 +512,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
-/*#/#*//*#i4.i183.image.css:image/base/css*/
-#i183 { opacity: 1; }
-/*#/#*//*#i183.i184.positioning.css:positioning/base/css.1*/
-#i183 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 71px; height: 21px;
-        -ms-transform: translate(0, 0) translate(223px, 222px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(223px, 222px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(223px, 222px) rotate(0deg);
-        transform: translate(0, 0) translate(223px, 222px) rotate(0deg);
-}
 /*#/#*//*#i4.i14.text.css:text/base/css*/
 #i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 16px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
@@ -541,6 +532,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(97px, 145px) rotate(0deg);
         transform: translate(0, 0) translate(97px, 145px) rotate(0deg);
 }
+/*#/#*//*#i4.i243.image.css:image/base/css*/
+#i243 { opacity: 1; }
+/*#/#*//*#i243.i244.positioning.css:positioning/base/css.1*/
+#i243 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 62px; height: 18px;
+        -ms-transform: translate(0, 0) translate(229px, 226px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(229px, 226px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(229px, 226px) rotate(0deg);
+        transform: translate(0, 0) translate(229px, 226px) rotate(0deg);
+}
 /*#/#*//*#i4.i91.shape.css:shape/base/css*/
 #i91 { background-color: #dedede; opacity: 0.00;
 }
@@ -553,16 +553,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 /*#/#*//*#i50.i51.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i4 { cursor: pointer; }
-/*#/#*//*#i5.i30.shape.css:shape/base/css*/
-#i30 { background-color: #fafafa; opacity: 1;
-}
-/*#/#*//*#i30.i31.positioning.css:positioning/base/css.1*/
-#i30 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        transform: translate(0, 0) translate(0, 0) rotate(0deg);
-}
 /*#/#*//*#cube.css:cube/globalcss.1*/
 
 .transformation {
@@ -692,6 +682,16 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     background-color: #5AAAD2;
 }
 
+/*#/#*//*#i5.i30.shape.css:shape/base/css*/
+#i30 { background-color: #ffffff; opacity: 1;
+}
+/*#/#*//*#i30.i31.positioning.css:positioning/base/css.1*/
+#i30 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
+        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        transform: translate(0, 0) translate(0, 0) rotate(0deg);
+}
 /*#/#*//*#i5.i24.text.css:text/base/css*/
 #i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 16px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px; margin-left: 5px;}
 /*#/#*//*#i24.i25.positioning.css:positioning/base/css.1*/
@@ -713,11 +713,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i5.i235.image.css:image/base/css*/
 #i235 { opacity: 1; }
 /*#/#*//*#i235.i236.positioning.css:positioning/base/css.1*/
-#i235 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 71px; height: 21px;
-        -ms-transform: translate(0, 0) translate(223px, 222px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(223px, 222px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(223px, 222px) rotate(0deg);
-        transform: translate(0, 0) translate(223px, 222px) rotate(0deg);
+#i235 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 62px; height: 18px;
+        -ms-transform: translate(0, 0) translate(229px, 226px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(229px, 226px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(229px, 226px) rotate(0deg);
+        transform: translate(0, 0) translate(229px, 226px) rotate(0deg);
 }
 /*#/#*//*#i5.i239.button.css:button/base/css*/
 #i239 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(9,49,150,1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 25px; border-color: rgba(9,49,150,1); border-width: 1px; margin:-1px; border-style: solid; }
@@ -765,12 +765,12 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i20"></div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/MFNWpuB.png"/>
-<!--#/#--><!--#i4.i183.image.html:image/html-->
-<img id="i183" src="https://i.imgur.com/A0gU5yP.png"/>
 <!--#/#--><!--#i4.i14.text.html:text/html-->
 <div id="i14">Aprende o mejora tu inglés en menos tiempo y con el mejor método en Berlitz.</div>
 <!--#/#--><!--#i4.i181.button.html:button/html-->
 <button id="i181">Conoce más</button>
+<!--#/#--><!--#i4.i243.image.html:image/html-->
+<img id="i243" src="https://i.imgur.com/A0gU5yP.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#-->
@@ -830,7 +830,7 @@ document.getElementById('i2').addEventListener('showNext', function(e){
 });
 /*#/#*//*#i4.i130.image.js:image/base/js*/
 
-/*#/#*//*#i4.i183.image.js:image/base/js*/
+/*#/#*//*#i4.i243.image.js:image/base/js*/
 
 /*#/#*//*#i91.i241.actions.js:actions/base/js.1*/
 /* Name: On Click; */
@@ -890,11 +890,6 @@ name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i130.i131.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i4.i183.image.meta:image/meta*/
-name: A0gU5yP.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i183.i184.positioning.meta:positioning/meta.1*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i14.text.meta:text/meta*/
 name: Texto; customName: 1;
 /*#/#*//*#i14.i15.positioning.meta:positioning/meta.1*/
@@ -904,6 +899,11 @@ name: Conoce más;
 customName: false;
 /*#/#*//*#i181.i182.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
+/*#/#*//*#i4.i243.image.meta:image/meta*/
+name: A0gU5yP.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i243.i244.positioning.meta:positioning/meta.1*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i91.shape.meta:shape/meta*/
 name: Link;
 /*#/#*//*#i91.i92.positioning.meta:positioning/meta.1*/
