--- a/Philips/Fade.html
+++ b/Philips/Fade.html
@@ -312,7 +312,7 @@
             <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:20px;">Depilación en casa y sin dolor, ¡es posible con Philips Lumea!</span></div>
            
             <div style="bottom:0px;text-align:right;margin-top:10px;"> 
-              <img src="https://i.imgur.com/PcyHuwS.png" style="height:12px;margin-right:5px;">
+              <img src="https://i.imgur.com/gvXS2BO.jpg" style="height:50px;margin-right:5px;">
             </div>
         </a>
     </div>
