--- a/Philips/Cube2.html
+++ b/Philips/Cube2.html
@@ -524,26 +524,25 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(92px, 145px) rotate(0deg);
 }
 /*#/#*//*#i4.i14.text.css:text/base/css*/
-#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 19px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
+#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 18px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
 #i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 280px; height: 49px;
-        -ms-transform: translate(-50%, -50%) translate(1px, 81px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(1px, 81px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(1px, 81px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(1px, 81px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(1px, 78px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(1px, 78px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(1px, 78px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(1px, 78px) rotate(0deg);
 }
-/*#/#*//*#i4.i212.image.css:image/base/css*/
-#i212 { opacity: 1; }
-/*#/#*//*#i212.i213.positioning.css:positioning/base/css.2*/
-#i212 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 70px; height: 13px;
-        -ms-transform: translate(0, 0) translate(217px, 228px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(217px, 228px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(217px, 228px) rotate(0deg);
-        transform: translate(0, 0) translate(217px, 228px) rotate(0deg);
+/*#/#*//*#i4.i216.image.css:image/base/css*/
+#i216 { opacity: 1; }
+/*#/#*//*#i216.i217.positioning.css:positioning/base/css.2*/
+#i216 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 44px; height: 44px;
+        -ms-transform: translate(0, 0) translate(250px, 217px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(250px, 217px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(250px, 217px) rotate(0deg);
+        transform: translate(0, 0) translate(250px, 217px) rotate(0deg);
 }
-/*#/#*//*#visibility.css:visibility/globalcss*/
-.visibility-hidden, .visibility-hidden * {
-    visibility: hidden !important;
+/*#/#*//*#i4.i91.shape.css:shape/base/css*/
+#i91 { background-color: #dedede; opacity: 0.00;
 }
 /*#/#*//*#cube.css:cube/globalcss.1*/
 
@@ -674,13 +673,14 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     background-color: #5AAAD2;
 }
 
-/*#/#*//*#i4.i91.shape.css:shape/base/css*/
-#i91 { background-color: #dedede; opacity: 0.00;
+/*#/#*//*#visibility.css:visibility/globalcss*/
+.visibility-hidden, .visibility-hidden * {
+    visibility: hidden !important;
 }
 /*#/#*//*#i177.i178.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i91 { cursor: pointer; }
 /*#/#*//*#i91.i92.positioning.css:positioning/base/css.1*/
-#i91 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100.2%;
+#i91 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
         -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
@@ -721,20 +721,20 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i5.i192.image.css:image/base/css*/
 #i192 { opacity: 1; }
 /*#/#*//*#i192.i193.positioning.css:positioning/base/css.2*/
-#i192 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 70px; height: 13px;
-        -ms-transform: translate(0, 0) translate(223px, 231px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(223px, 231px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(223px, 231px) rotate(0deg);
-        transform: translate(0, 0) translate(223px, 231px) rotate(0deg);
+#i192 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 46px; height: 46px;
+        -ms-transform: translate(0, 0) translate(248px, 215px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(248px, 215px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(248px, 215px) rotate(0deg);
+        transform: translate(0, 0) translate(248px, 215px) rotate(0deg);
 }
 /*#/#*//*#i5.i214.text.css:text/base/css*/
 #i214 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 18px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
 /*#/#*//*#i214.i215.positioning.css:positioning/base/css.1*/
 #i214 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 275px; height: 59px;
-        -ms-transform: translate(-50%, -50%) translate(1px, 82px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(1px, 82px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(1px, 82px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(1px, 82px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(-1px, 80px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(-1px, 80px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(-1px, 80px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(-1px, 80px) rotate(0deg);
 }
 /*#/#*//*#i5.i95.shape.css:shape/base/css*/
 #i95 { background-color: #dedede; opacity: 0.00;
@@ -774,9 +774,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i184.button.html:button/html-->
 <button id="i184">Conoce más</button>
 <!--#/#--><!--#i4.i14.text.html:text/html-->
-<div id="i14">Depilación en casa y sin dolor ¡es posible con Philips Lumea!</div>
-<!--#/#--><!--#i4.i212.image.html:image/html-->
-<img id="i212" src="https://i.imgur.com/PcyHuwS.png"/>
+<div id="i14">Depilación en casa y sin dolor 
+¡es posible con Philips Lumea!</div>
+<!--#/#--><!--#i4.i216.image.html:image/html-->
+<img id="i216" src="https://i.imgur.com/gvXS2BO.jpg"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#-->
@@ -790,7 +791,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i5.i188.button.html:button/html-->
 <button id="i188">Conoce más</button>
 <!--#/#--><!--#i5.i192.image.html:image/html-->
-<img id="i192" src="https://i.imgur.com/PcyHuwS.png"/>
+<img id="i192" src="https://i.imgur.com/gvXS2BO.jpg"/>
 <!--#/#--><!--#i5.i214.text.html:text/html-->
 <div id="i214">IPL con 4 accesorios diseñados exclusivamente para cuerpo, rostro, bikini y axilas</div>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
@@ -845,10 +846,10 @@ document.getElementById('i91').addEventListener('click', function(e){
     window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.cosmoenespanol.com/belleza/luz-pulsada-metodo-depilacion/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
-/*#/#*//*#i4.i212.image.js:image/base/js*/
+/*#/#*//*#i4.i216.image.js:image/base/js*/
 
-/*#/#*//*#i212.i213.positioning.js:positioning/base/js.2*/
-bmShow('i212');
+/*#/#*//*#i216.i217.positioning.js:positioning/base/js.2*/
+bmShow('i216');
 /*#/#*//*#i4.i50.actions.js:actions/base/js*/
 /* Name: On Click; */
 
@@ -872,6 +873,8 @@ document.getElementById('i95').addEventListener('click', function(e){
 /*#/#*//*#i5.i52.actions.js:actions/base/js*/
 /* Name: On Click; */
 
+/*#/#*//*#i52.i53.actions-clicktag.js:actions-clicktag/base/js.1*/
+   
 /*#/#*//*#i183.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -917,10 +920,10 @@ data: /*!*/{}/*!*/;
 name: Texto; customName: 1;
 /*#/#*//*#i14.i15.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i4.i212.image.meta:image/meta*/
-name: PcyHuwS.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+/*#/#*//*#i4.i216.image.meta:image/meta*/
+name: gvXS2BO.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
-/*#/#*//*#i212.i213.positioning.meta:positioning/meta.2*/
+/*#/#*//*#i216.i217.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i91.shape.meta:shape/meta*/
 name: Link;
@@ -943,7 +946,7 @@ customName: false;
 /*#/#*//*#i188.i189.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i5.i192.image.meta:image/meta*/
-name: PcyHuwS.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: gvXS2BO.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i192.i193.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
