--- a/Philips/Cube1.html
+++ b/Philips/Cube1.html
@@ -535,11 +535,23 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i4.i212.image.css:image/base/css*/
 #i212 { opacity: 1; }
 /*#/#*//*#i212.i213.positioning.css:positioning/base/css.2*/
-#i212 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 70px; height: 13px;
-        -ms-transform: translate(0, 0) translate(217px, 228px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(217px, 228px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(217px, 228px) rotate(0deg);
-        transform: translate(0, 0) translate(217px, 228px) rotate(0deg);
+#i212 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 45px; height: 45px;
+        -ms-transform: translate(0, 0) translate(244px, 212px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(244px, 212px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(244px, 212px) rotate(0deg);
+        transform: translate(0, 0) translate(244px, 212px) rotate(0deg);
+}
+/*#/#*//*#i4.i91.shape.css:shape/base/css*/
+#i91 { background-color: #dedede; opacity: 0.00;
+}
+/*#/#*//*#i177.i178.actions-clicktag.css:actions-clicktag/base/css.1*/
+#i91 { cursor: pointer; }
+/*#/#*//*#i91.i92.positioning.css:positioning/base/css.1*/
+#i91 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100.2%;
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#visibility.css:visibility/globalcss*/
 .visibility-hidden, .visibility-hidden * {
@@ -674,18 +686,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     background-color: #5AAAD2;
 }
 
-/*#/#*//*#i4.i91.shape.css:shape/base/css*/
-#i91 { background-color: #dedede; opacity: 0.00;
-}
-/*#/#*//*#i177.i178.actions-clicktag.css:actions-clicktag/base/css.1*/
-#i91 { cursor: pointer; }
-/*#/#*//*#i91.i92.positioning.css:positioning/base/css.1*/
-#i91 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100.2%;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
 /*#/#*//*#i50.i51.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i4 { cursor: pointer; }
 /*#/#*//*#i5.i30.shape.css:shape/base/css*/
@@ -718,23 +718,14 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(92px, 145px) rotate(0deg);
         transform: translate(0, 0) translate(92px, 145px) rotate(0deg);
 }
-/*#/#*//*#i5.i192.image.css:image/base/css*/
-#i192 { opacity: 1; }
-/*#/#*//*#i192.i193.positioning.css:positioning/base/css.2*/
-#i192 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 70px; height: 13px;
-        -ms-transform: translate(0, 0) translate(223px, 231px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(223px, 231px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(223px, 231px) rotate(0deg);
-        transform: translate(0, 0) translate(223px, 231px) rotate(0deg);
-}
 /*#/#*//*#i5.i214.text.css:text/base/css*/
-#i214 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 18px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
+#i214 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 16px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
 /*#/#*//*#i214.i215.positioning.css:positioning/base/css.1*/
 #i214 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 275px; height: 43px;
-        -ms-transform: translate(-50%, -50%) translate(1px, 79px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(1px, 79px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(1px, 79px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(1px, 79px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(1px, 77px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(1px, 77px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(1px, 77px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(1px, 77px) rotate(0deg);
 }
 /*#/#*//*#i5.i95.shape.css:shape/base/css*/
 #i95 { background-color: #dedede; opacity: 0.00;
@@ -747,6 +738,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+}
+/*#/#*//*#i5.i216.image.css:image/base/css*/
+#i216 { opacity: 1; }
+/*#/#*//*#i216.i217.positioning.css:positioning/base/css.2*/
+#i216 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 45px; height: 45px;
+        -ms-transform: translate(0, 0) translate(244px, 213px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(244px, 213px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(244px, 213px) rotate(0deg);
+        transform: translate(0, 0) translate(244px, 213px) rotate(0deg);
 }
 /*#/#*//*#i52.i53.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i5 { cursor: pointer; }
@@ -776,7 +776,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i14.text.html:text/html-->
 <div id="i14">¿Por qué usar la depilación pulsada en mi piel?</div>
 <!--#/#--><!--#i4.i212.image.html:image/html-->
-<img id="i212" src="https://i.imgur.com/PcyHuwS.png"/>
+<img id="i212" src="https://i.imgur.com/gvXS2BO.jpg"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#-->
@@ -789,12 +789,12 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i186" src="https://i.imgur.com/FLYc8vj.jpg"/>
 <!--#/#--><!--#i5.i188.button.html:button/html-->
 <button id="i188">Conoce más</button>
-<!--#/#--><!--#i5.i192.image.html:image/html-->
-<img id="i192" src="https://i.imgur.com/PcyHuwS.png"/>
 <!--#/#--><!--#i5.i214.text.html:text/html-->
 <div id="i214">Disfruta hasta 92% de reducción del vello en solo 3 tratamientos.</div>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
+<!--#/#--><!--#i5.i216.image.html:image/html-->
+<img id="i216" src="https://i.imgur.com/gvXS2BO.jpg"/>
 <!--#/#-->
 </div>
 <!--#/#-->
@@ -838,6 +838,10 @@ document.getElementById('i2').addEventListener('showNext', function(e){
 
 /*#/#*//*#i184.i185.positioning.js:positioning/base/js.2*/
 bmShow('i184');
+/*#/#*//*#i4.i212.image.js:image/base/js*/
+
+/*#/#*//*#i212.i213.positioning.js:positioning/base/js.2*/
+bmShow('i212');
 /*#/#*//*#i91.i177.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i91').addEventListener('click', function(e){
@@ -845,23 +849,15 @@ document.getElementById('i91').addEventListener('click', function(e){
     window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.cosmoenespanol.com/belleza/depilacion-ipl-en-casa-sin-dolor-y-por-mas-tiempo/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
-/*#/#*//*#i4.i212.image.js:image/base/js*/
-
-/*#/#*//*#i212.i213.positioning.js:positioning/base/js.2*/
-bmShow('i212');
 /*#/#*//*#i4.i50.actions.js:actions/base/js*/
 /* Name: On Click; */
 
 /*#/#*//*#i50.i51.actions-clicktag.js:actions-clicktag/base/js.1*/
-   
+    
 /*#/#*//*#i5.i186.image.js:image/base/js*/
 
 /*#/#*//*#i188.i189.positioning.js:positioning/base/js.2*/
 bmShow('i188');
-/*#/#*//*#i5.i192.image.js:image/base/js*/
-
-/*#/#*//*#i192.i193.positioning.js:positioning/base/js.2*/
-bmShow('i192');
 /*#/#*//*#i95.i175.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i95').addEventListener('click', function(e){
@@ -869,9 +865,17 @@ document.getElementById('i95').addEventListener('click', function(e){
     window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.cosmoenespanol.com/belleza/depilacion-ipl-en-casa-sin-dolor-y-por-mas-tiempo/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
+/*#/#*//*#i5.i216.image.js:image/base/js*/
+
+/*#/#*//*#i216.i217.positioning.js:positioning/base/js.2*/
+bmShow('i216');
 /*#/#*//*#i5.i52.actions.js:actions/base/js*/
 /* Name: On Click; */
+document.getElementById('i5').addEventListener('click', function(e){
+    /*#i52.i53.actions-clicktag.js:actions-clicktag/base/js.1*/
 
+/*#/#*/
+});
 /*#/#*//*#i183.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -918,7 +922,7 @@ name: Texto; customName: 1;
 /*#/#*//*#i14.i15.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i4.i212.image.meta:image/meta*/
-name: PcyHuwS.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: gvXS2BO.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i212.i213.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
@@ -942,11 +946,6 @@ name: Conoce más;
 customName: false;
 /*#/#*//*#i188.i189.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i5.i192.image.meta:image/meta*/
-name: PcyHuwS.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i192.i193.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i214.text.meta:text/meta*/
 name: Texto; customName: 1;
 /*#/#*//*#i214.i215.positioning.meta:positioning/meta.1*/
@@ -955,6 +954,11 @@ data: /*!*/{}/*!*/;
 name: Link;
 /*#/#*//*#i95.i96.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
+/*#/#*//*#i5.i216.image.meta:image/meta*/
+name: gvXS2BO.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i216.i217.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*/--><!--#/#-->
