--- a/Move Over/videobig.html
+++ b/Move Over/videobig.html
@@ -263,7 +263,7 @@
            
         <div class="tgx_text"> 
             <span class="tgx_text_title tgx_text_bold">
-               If you are a real gator fan, slow down and move over,      its the law !!
+               If you are a real Gator fan, slow down and move over,      its the law !!
             </span>
            
 
