CORRECCION cta move over

--- a/Move Over/video.html
+++ b/Move Over/video.html
@@ -56,7 +56,7 @@
             z-index: 5;
             margin-left: 97px;
             
-            background-color: #17293f;
+            background-color: #f80000;
             padding: 5px;
             border-radius: 20px;
             text-align: center;
