--- a/Move Over/fade.html
+++ b/Move Over/fade.html
@@ -85,7 +85,7 @@
             z-index: 2;
             margin-left: 40%;
             left: -30px;
-            background-color: #17293f;
+            background-color: #f80000;
             padding: 5px;
             border-radius: 20px;
             text-align: center;
