--- a/Move Over/videobig.html
+++ b/Move Over/videobig.html
@@ -191,7 +191,7 @@
             z-index: 2;
             margin-left: 47%;
             left: -30px;
-            background-color: #17293f;
+            background-color: #f80000;
             padding: 5px;
             border-radius: 20px;
             text-align: center;
@@ -230,7 +230,7 @@
             bottom: 5px;
             left: 85%;
             text-transform: uppercase;
-            background-color: #e97000;
+            background-color: #f80000;
             color: white;
             border-radius: 50% 50%;
             padding: 0.7em 0.8em;
