--- a/Move Over/videobig.html
+++ b/Move Over/videobig.html
@@ -189,8 +189,8 @@
             width: 80px;
             line-height: 1.3em;
             z-index: 2;
-            margin-left: 47%;
-            left: -30px;
+            margin-left: 100px;
+           
             background-color: #f80000;
             padding: 5px;
             border-radius: 20px;
