--- a/Desafio/video2.html
+++ b/Desafio/video2.html
@@ -24,7 +24,7 @@
 		.HistoryChannel .bzm_pos_bl{bottom:3%;left:3%}
 		.HistoryChannel .bzm_pos_br{bottom:3%;right:3%}
 		.HistoryChannel .bzm_pos_bm{bottom:3%;left:calc(100% - 70%)}
-		.HistoryChannel .bzm_text{padding:20px 0 10px .3em;line-height:1.1;color:#000; margin-left:8px;margin-right: 15;}
+		.HistoryChannel .bzm_text{padding:23px 0 10px .3em;line-height:1.1;color:#000; margin-left:8px;margin-right: 15;}
 		.HistoryChannel .bzm_text_title{font-size:16px;color:#000;}
 		.HistoryChannel .bzm_text_light{font-size:10px;font-weight:0}
 		.HistoryChannel .bzm_text_medium{font-size:15px;font-weight:500;line-height:1.4}
@@ -44,7 +44,7 @@
 		float: right;
 		height: 40px;
 		text-align: center;
-		margin-top: -10px;
+		margin-top: -13px;
 		margin-right: -50px
 			}
 
@@ -72,7 +72,7 @@
         <div class="carousel-container">
 			<div style="text-align:center; margin-top:-10px;">
 				<script>var playersrc;</script>
-					<iframe class="yt560x315" id="JSytplayer" width="290" height="176" src="https://www.youtube.com/embed/8cPJ_9LnZ5I?rel=0&autoplay=1&modestbranding=0&loop=1&controls=0&mute=1" onmouseover="this.src=playersrc+'=0'" onmouseout="this.src=playersrc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+					<iframe class="yt560x315" id="JSytplayer" width="290" height="176" src="https://www.youtube.com/embed/rsKxLfe-8Dk?rel=0&autoplay=1&modestbranding=0&loop=1&controls=0&mute=1" onmouseover="this.src=playersrc+'=0'" onmouseout="this.src=playersrc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 				<script>playersrc=document.getElementById('JSytplayer').src;</script>
 			</div>
 		</div>
@@ -80,7 +80,7 @@
 		 <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:80%; color: white;">¿Afilado?</span></div>
 		
 			<div class="bzm_text">
-				<span class="bzm_text_title  bzm_text_bold" style="font-size:18px; color:#000;">¿Crees que hubieras sobrevivido a un ataque con esta arma antigua?
+				<span class="bzm_text_title  bzm_text_bold" style="font-size:20px; color:#000;">¿Que harías si alguien te ataca con este arma?
 </span>
 				
 			</div>
