--- a/Philips/Cube1.html
+++ b/Philips/Cube1.html
@@ -524,7 +524,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(92px, 145px) rotate(0deg);
 }
 /*#/#*//*#i4.i14.text.css:text/base/css*/
-#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 19px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
+#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 19px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
 #i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 280px; height: 49px;
         -ms-transform: translate(-50%, -50%) translate(1px, 81px) rotate(0deg);
@@ -535,11 +535,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i4.i212.image.css:image/base/css*/
 #i212 { opacity: 1; }
 /*#/#*//*#i212.i213.positioning.css:positioning/base/css.2*/
-#i212 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 45px; height: 45px;
-        -ms-transform: translate(0, 0) translate(244px, 212px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(244px, 212px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(244px, 212px) rotate(0deg);
-        transform: translate(0, 0) translate(244px, 212px) rotate(0deg);
+#i212 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 51px; height: 51px;
+        -ms-transform: translate(0, 0) translate(238px, 206px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(238px, 206px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(238px, 206px) rotate(0deg);
+        transform: translate(0, 0) translate(238px, 206px) rotate(0deg);
 }
 /*#/#*//*#i4.i91.shape.css:shape/base/css*/
 #i91 { background-color: #dedede; opacity: 0.00;
@@ -547,7 +547,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i177.i178.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i91 { cursor: pointer; }
 /*#/#*//*#i91.i92.positioning.css:positioning/base/css.1*/
-#i91 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100.2%;
+#i91 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
         -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
@@ -557,6 +557,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 .visibility-hidden, .visibility-hidden * {
     visibility: hidden !important;
 }
+/*#/#*//*#i50.i51.actions-clicktag.css:actions-clicktag/base/css.1*/
+#i4 { cursor: pointer; }
 /*#/#*//*#cube.css:cube/globalcss.1*/
 
 .transformation {
@@ -686,8 +688,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     background-color: #5AAAD2;
 }
 
-/*#/#*//*#i50.i51.actions-clicktag.css:actions-clicktag/base/css.1*/
-#i4 { cursor: pointer; }
 /*#/#*//*#i5.i30.shape.css:shape/base/css*/
 #i30 { background-color: #ffffff; opacity: 1;
 }
@@ -719,13 +719,22 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(92px, 145px) rotate(0deg);
 }
 /*#/#*//*#i5.i214.text.css:text/base/css*/
-#i214 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 16px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
+#i214 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 16px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
 /*#/#*//*#i214.i215.positioning.css:positioning/base/css.1*/
 #i214 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 275px; height: 43px;
         -ms-transform: translate(-50%, -50%) translate(1px, 77px) rotate(0deg);
         -webkit-transform: translate(-50%, -50%) translate(1px, 77px) rotate(0deg);
         -moz-transform: translate(-50%, -50%) translate(1px, 77px) rotate(0deg);
         transform: translate(-50%, -50%) translate(1px, 77px) rotate(0deg);
+}
+/*#/#*//*#i5.i216.image.css:image/base/css*/
+#i216 { opacity: 1; }
+/*#/#*//*#i216.i217.positioning.css:positioning/base/css.2*/
+#i216 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 51px; height: 51px;
+        -ms-transform: translate(0, 0) translate(238px, 206px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(238px, 206px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(238px, 206px) rotate(0deg);
+        transform: translate(0, 0) translate(238px, 206px) rotate(0deg);
 }
 /*#/#*//*#i5.i95.shape.css:shape/base/css*/
 #i95 { background-color: #dedede; opacity: 0.00;
@@ -738,15 +747,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
-/*#/#*//*#i5.i216.image.css:image/base/css*/
-#i216 { opacity: 1; }
-/*#/#*//*#i216.i217.positioning.css:positioning/base/css.2*/
-#i216 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 45px; height: 45px;
-        -ms-transform: translate(0, 0) translate(244px, 213px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(244px, 213px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(244px, 213px) rotate(0deg);
-        transform: translate(0, 0) translate(244px, 213px) rotate(0deg);
 }
 /*#/#*//*#i52.i53.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i5 { cursor: pointer; }
@@ -791,10 +791,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <button id="i188">Conoce más</button>
 <!--#/#--><!--#i5.i214.text.html:text/html-->
 <div id="i214">Disfruta hasta 92% de reducción del vello en solo 3 tratamientos.</div>
-<!--#/#--><!--#i5.i95.shape.html:shape/html-->
-<div id="i95"></div>
 <!--#/#--><!--#i5.i216.image.html:image/html-->
 <img id="i216" src="https://i.imgur.com/gvXS2BO.jpg"/>
+<!--#/#--><!--#i5.i95.shape.html:shape/html-->
+<div id="i95"></div>
 <!--#/#-->
 </div>
 <!--#/#-->
@@ -854,7 +854,6 @@ document.getElementById('i91').addEventListener('click', function(e){
 
 /*#/#*//*#i50.i51.actions-clicktag.js:actions-clicktag/base/js.1*/
     
-/*#/#*//*#i5.i186.image.js:image/base/js*/
 
 /*#/#*//*#i188.i189.positioning.js:positioning/base/js.2*/
 bmShow('i188');
@@ -871,11 +870,7 @@ document.getElementById('i95').addEventListener('click', function(e){
 bmShow('i216');
 /*#/#*//*#i5.i52.actions.js:actions/base/js*/
 /* Name: On Click; */
-document.getElementById('i5').addEventListener('click', function(e){
-    /*#i52.i53.actions-clicktag.js:actions-clicktag/base/js.1*/
 
-/*#/#*/
-});
 /*#/#*//*#i183.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -950,15 +945,15 @@ data: /*!*/{}/*!*/;
 name: Texto; customName: 1;
 /*#/#*//*#i214.i215.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i5.i95.shape.meta:shape/meta*/
-name: Link;
-/*#/#*//*#i95.i96.positioning.meta:positioning/meta.1*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i5.i216.image.meta:image/meta*/
 name: gvXS2BO.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i216.i217.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i5.i95.shape.meta:shape/meta*/
+name: Link;
+/*#/#*//*#i95.i96.positioning.meta:positioning/meta.1*/
+data: /*!*/{}/*!*/;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*/--><!--#/#-->
