--- a/Philips/Cube2.html
+++ b/Philips/Cube2.html
@@ -470,7 +470,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#-->
 <!--#/#--><!--#css:common/css-->
 <style>
-/*#i2.cube.css:cube/base/css.1*/
+/*#visibility.css:visibility/globalcss*/
+.visibility-hidden, .visibility-hidden * {
+    visibility: hidden !important;
+}
+/*#/#*//*#i2.cube.css:cube/base/css.1*/
 #i2.shape-holder {
     position: absolute;
 
@@ -493,57 +497,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     overflow: hidden;
 }
 
-/*#/#*//*#i4.i20.shape.css:shape/base/css*/
-#i20 { background-color: #ffffff; opacity: 1;
-}
-/*#/#*//*#i20.i21.positioning.css:positioning/base/css.1*/
-#i20 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
-/*#/#*//*#i4.i130.image.css:image/base/css*/
-#i130 { opacity: 1; }
-/*#/#*//*#i130.i131.positioning.css:positioning/base/css.1*/
-#i130 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 160px;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
-/*#/#*//*#i4.i184.button.css:button/base/css*/
-#i184 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(255,99,155,1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,99,155,1); border-radius: 20px; border-color: rgba(255,99,155,1); border-width: 1px; margin:-1px; border-style: solid; }
-#i184:hover { opacity: 1; background-color: rgba(0,90,140, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
-#i184:active { opacity: 1; background-color: rgba(0,80,130, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
-/*#/#*//*#i184.i185.positioning.css:positioning/base/css.2*/
-#i184 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 116px; height: 30px;
-        -ms-transform: translate(0, 0) translate(92px, 145px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(92px, 145px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(92px, 145px) rotate(0deg);
-        transform: translate(0, 0) translate(92px, 145px) rotate(0deg);
-}
-/*#/#*//*#i4.i14.text.css:text/base/css*/
-#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 18px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
-/*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
-#i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 280px; height: 49px;
-        -ms-transform: translate(-50%, -50%) translate(1px, 78px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(1px, 78px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(1px, 78px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(1px, 78px) rotate(0deg);
-}
-/*#/#*//*#i4.i216.image.css:image/base/css*/
-#i216 { opacity: 1; }
-/*#/#*//*#i216.i217.positioning.css:positioning/base/css.2*/
-#i216 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 44px; height: 44px;
-        -ms-transform: translate(0, 0) translate(250px, 217px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(250px, 217px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(250px, 217px) rotate(0deg);
-        transform: translate(0, 0) translate(250px, 217px) rotate(0deg);
-}
-/*#/#*//*#i4.i91.shape.css:shape/base/css*/
-#i91 { background-color: #dedede; opacity: 0.00;
-}
 /*#/#*//*#cube.css:cube/globalcss.1*/
 
 .transformation {
@@ -673,14 +626,61 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     background-color: #5AAAD2;
 }
 
-/*#/#*//*#visibility.css:visibility/globalcss*/
-.visibility-hidden, .visibility-hidden * {
-    visibility: hidden !important;
+/*#/#*//*#i4.i20.shape.css:shape/base/css*/
+#i20 { background-color: #ffffff; opacity: 1;
+}
+/*#/#*//*#i20.i21.positioning.css:positioning/base/css.1*/
+#i20 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+}
+/*#/#*//*#i4.i130.image.css:image/base/css*/
+#i130 { opacity: 1; }
+/*#/#*//*#i130.i131.positioning.css:positioning/base/css.1*/
+#i130 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 160px;
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+}
+/*#/#*//*#i4.i184.button.css:button/base/css*/
+#i184 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(255,99,155,1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,99,155,1); border-radius: 20px; border-color: rgba(255,99,155,1); border-width: 1px; margin:-1px; border-style: solid; }
+#i184:hover { opacity: 1; background-color: rgba(0,90,140, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
+#i184:active { opacity: 1; background-color: rgba(0,80,130, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
+/*#/#*//*#i184.i185.positioning.css:positioning/base/css.2*/
+#i184 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 116px; height: 30px;
+        -ms-transform: translate(0, 0) translate(92px, 145px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(92px, 145px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(92px, 145px) rotate(0deg);
+        transform: translate(0, 0) translate(92px, 145px) rotate(0deg);
+}
+/*#/#*//*#i4.i14.text.css:text/base/css*/
+#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 20px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
+/*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
+#i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 233px; height: 72px;
+        -ms-transform: translate(-50%, -50%) translate(-22px, 89px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(-22px, 89px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(-22px, 89px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(-22px, 89px) rotate(0deg);
+}
+/*#/#*//*#i4.i216.image.css:image/base/css*/
+#i216 { opacity: 1; }
+/*#/#*//*#i216.i217.positioning.css:positioning/base/css.2*/
+#i216 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 56px; height: 56px;
+        -ms-transform: translate(0, 0) translate(238px, 205px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(238px, 205px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(238px, 205px) rotate(0deg);
+        transform: translate(0, 0) translate(238px, 205px) rotate(0deg);
+}
+/*#/#*//*#i4.i91.shape.css:shape/base/css*/
+#i91 { background-color: #dedede; opacity: 0.00;
 }
 /*#/#*//*#i177.i178.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i91 { cursor: pointer; }
 /*#/#*//*#i91.i92.positioning.css:positioning/base/css.1*/
-#i91 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
+#i91 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 60.8%;
         -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
@@ -718,23 +718,23 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(92px, 145px) rotate(0deg);
         transform: translate(0, 0) translate(92px, 145px) rotate(0deg);
 }
-/*#/#*//*#i5.i192.image.css:image/base/css*/
-#i192 { opacity: 1; }
-/*#/#*//*#i192.i193.positioning.css:positioning/base/css.2*/
-#i192 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 46px; height: 46px;
-        -ms-transform: translate(0, 0) translate(248px, 215px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(248px, 215px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(248px, 215px) rotate(0deg);
-        transform: translate(0, 0) translate(248px, 215px) rotate(0deg);
-}
 /*#/#*//*#i5.i214.text.css:text/base/css*/
-#i214 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 18px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
+#i214 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 18px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
 /*#/#*//*#i214.i215.positioning.css:positioning/base/css.1*/
-#i214 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 275px; height: 59px;
-        -ms-transform: translate(-50%, -50%) translate(-1px, 80px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(-1px, 80px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(-1px, 80px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(-1px, 80px) rotate(0deg);
+#i214 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 237px; height: 75px;
+        -ms-transform: translate(-50%, -50%) translate(-20px, 87px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(-20px, 87px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(-20px, 87px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(-20px, 87px) rotate(0deg);
+}
+/*#/#*//*#i5.i218.image.css:image/base/css*/
+#i218 { opacity: 1; }
+/*#/#*//*#i218.i219.positioning.css:positioning/base/css.2*/
+#i218 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 56px; height: 56px;
+        -ms-transform: translate(0, 0) translate(238px, 205px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(238px, 205px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(238px, 205px) rotate(0deg);
+        transform: translate(0, 0) translate(238px, 205px) rotate(0deg);
 }
 /*#/#*//*#i5.i95.shape.css:shape/base/css*/
 #i95 { background-color: #dedede; opacity: 0.00;
@@ -774,8 +774,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i184.button.html:button/html-->
 <button id="i184">Conoce más</button>
 <!--#/#--><!--#i4.i14.text.html:text/html-->
-<div id="i14">Depilación en casa y sin dolor 
-¡es posible con Philips Lumea!</div>
+<div id="i14">Depilación en casa y sin dolor ¡es posible con Philips Lumea!</div>
 <!--#/#--><!--#i4.i216.image.html:image/html-->
 <img id="i216" src="https://i.imgur.com/gvXS2BO.jpg"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
@@ -790,10 +789,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i186" src="https://i.imgur.com/R1KD4Jy.jpg"/>
 <!--#/#--><!--#i5.i188.button.html:button/html-->
 <button id="i188">Conoce más</button>
-<!--#/#--><!--#i5.i192.image.html:image/html-->
-<img id="i192" src="https://i.imgur.com/gvXS2BO.jpg"/>
 <!--#/#--><!--#i5.i214.text.html:text/html-->
 <div id="i214">IPL con 4 accesorios diseñados exclusivamente para cuerpo, rostro, bikini y axilas</div>
+<!--#/#--><!--#i5.i218.image.html:image/html-->
+<img id="i218" src="https://i.imgur.com/gvXS2BO.jpg"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#-->
@@ -839,6 +838,10 @@ document.getElementById('i2').addEventListener('showNext', function(e){
 
 /*#/#*//*#i184.i185.positioning.js:positioning/base/js.2*/
 bmShow('i184');
+/*#/#*//*#i4.i216.image.js:image/base/js*/
+
+/*#/#*//*#i216.i217.positioning.js:positioning/base/js.2*/
+bmShow('i216');
 /*#/#*//*#i91.i177.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i91').addEventListener('click', function(e){
@@ -846,10 +849,6 @@ document.getElementById('i91').addEventListener('click', function(e){
     window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.cosmoenespanol.com/belleza/luz-pulsada-metodo-depilacion/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
-/*#/#*//*#i4.i216.image.js:image/base/js*/
-
-/*#/#*//*#i216.i217.positioning.js:positioning/base/js.2*/
-bmShow('i216');
 /*#/#*//*#i4.i50.actions.js:actions/base/js*/
 /* Name: On Click; */
 
@@ -859,10 +858,6 @@ bmShow('i216');
 
 /*#/#*//*#i188.i189.positioning.js:positioning/base/js.2*/
 bmShow('i188');
-/*#/#*//*#i5.i192.image.js:image/base/js*/
-
-/*#/#*//*#i192.i193.positioning.js:positioning/base/js.2*/
-bmShow('i192');
 /*#/#*//*#i95.i175.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i95').addEventListener('click', function(e){
@@ -870,6 +865,10 @@ document.getElementById('i95').addEventListener('click', function(e){
     window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.cosmoenespanol.com/belleza/luz-pulsada-metodo-depilacion/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
+/*#/#*//*#i5.i218.image.js:image/base/js*/
+
+/*#/#*//*#i218.i219.positioning.js:positioning/base/js.2*/
+bmShow('i218');
 /*#/#*//*#i5.i52.actions.js:actions/base/js*/
 /* Name: On Click; */
 
@@ -945,15 +944,15 @@ name: Conoce más;
 customName: false;
 /*#/#*//*#i188.i189.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i5.i192.image.meta:image/meta*/
-name: gvXS2BO.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i192.i193.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i214.text.meta:text/meta*/
 name: Texto; customName: 1;
 /*#/#*//*#i214.i215.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
+/*#/#*//*#i5.i218.image.meta:image/meta*/
+name: gvXS2BO.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i218.i219.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i95.shape.meta:shape/meta*/
 name: Link;
 /*#/#*//*#i95.i96.positioning.meta:positioning/meta.1*/
