--- a/Berlitz Septiembre/CubeKids.html
+++ b/Berlitz Septiembre/CubeKids.html
@@ -784,7 +784,7 @@ e incrementa sus oportunidades
 <!--#/#--><!--#i5.i24.text.html:text/html-->
 <div id="i24">Aprender inglés ayudará a tus hijos 
 a alcanzar todas sus metas.
- ¡Impúlsalo desde hoy!</div>
+ ¡Impúlsalos desde hoy!</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/rQcu7Xm.png"/>
 <!--#/#--><!--#i5.i235.image.html:image/html-->
@@ -869,7 +869,7 @@ document.getElementById('i95').addEventListener('click', function(e){
 /* Name: On Click; */
 
 /*#/#*//*#i52.i53.actions-clicktag.js:actions-clicktag/base/js.1*/
-
+    
 /*#/#*/
 
   function next(){
