--- a/Desafio/video2.html
+++ b/Desafio/video2.html
@@ -279,7 +279,7 @@
            
         <div class="videonew_text"> 
             <span class="videonew_text_title videonew_text_bold">
-            ¿Que harías si alguien te ataca con este arma?
+            ¿Que harías si alguien te ataca con esta arma?
             </span>
            
 
