--- a/Car Week Septiembre/Fade.html
+++ b/Car Week Septiembre/Fade.html
@@ -309,7 +309,7 @@
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
-            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:17px;">Septiembre es el mes de CAR WEEK</span></div>
+            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:17px;">Septiembre es el mes de CAR WEEK.</span></div>
             <div class="bzm_text_small"> <span class="bzm_text_small" style="color:#000;line-height:1;font-size:15px; font-style: regular; margin-top: -10px;">El especial de autos llega a la televisión para conquistar a los fanáticos de los automóviles y motos. <b> Sólo por History. </b></span></div>
             
             <div style="bottom:0px;height: 26px;text-align:right;margin-top:-10px;"> 
