--- a/Car Week Septiembre/Fijo.html
+++ b/Car Week Septiembre/Fijo.html
@@ -182,7 +182,7 @@
             line-height: 1;
             margin-top: 4px;
             margin-right: 25px;
-            margin-left: 5px;
+            margin-left: 0px;
         }
 
         .ClaroColombiaFade .carousel-wrapper {
@@ -304,8 +304,8 @@
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
-            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:16px;">Enciende tu automóvil y tu televisor, llegó Car Week</span></div>
-            <div class="bzm_text_small"> <span class="bzm_text_small" style="color:#000;line-height:1;font-size:13px; font-style: regular; margin-top: 5px; margin-right:0px; ">En septiembre y por una semana,<b> History</b> trae para ti <b> Car Week, </b> el primer especial de autos y motos.</span></div>
+            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:16px;">Enciende tu automóvil y tu televisor, llegó Car Week.</span></div>
+            <div class="bzm_text_small"> <span class="bzm_text_small" style="color:#000;line-height:1;font-size:13px; font-style: regular; margin-top: 5px;  ">En septiembre y por una semana,<b> History</b> trae para ti <b> Car Week, </b> el primer especial de autos y motos.</span></div>
             
              <div style="bottom:10px;height: 26px;text-align:right;margin-top:-20px;"> 
               <img src="https://i.imgur.com/oAJM198.png" style="height:25px;margin-right:5px;">
