--- a/Car Week Septiembre/Slider.html
+++ b/Car Week Septiembre/Slider.html
@@ -203,7 +203,7 @@
 				<div style="padding-left: 5px;padding-top:2px;padding-right:5px;">
 					<div class="bzm_text" style="margin-top:3px">
 						<span class="bzm_text_title  bzm_text_bold" style="color:#000; line-height:0.5; font-size:18px; text-align:center;">
-						  Septiembre se viste de autos legendarios
+						  Septiembre se viste de autos legendarios.
 						</span><br>
 						
 						<span style="line-height:100%; color:#000; font-size:12px; text-align:center; margin-top:-5px;"><i>
