--- a/Chubb/videobig.html
+++ b/Chubb/videobig.html
@@ -262,7 +262,7 @@
            
         <div class="tgx_text"> 
             <span class="tgx_text_title tgx_text_bold">
-               ¿Estas protegiendo correctamente tu empresa?
+               ¿Estás protegiendo correctamente tu empresa?
             </span>
             <span class="tgx_text_light tgx_text_small" style="color:black;">
                 <p style="margin-top: 5px;"> Ya sea que tu empresa sea una corporación multinacional, una empresa mediana con operaciones regionales o bien un expansivo emprendimiento local, tanto tú mismo como la organización de la cual formas parte enfrentan un complejo de riesgos en constante evolución.
