--- a/ADIDAS/videos new/videoHigh.html
+++ b/ADIDAS/videos new/videoHigh.html
@@ -112,7 +112,7 @@
 
         .tgx_text {
             position: absolute;
-            top: 50%;
+            top: 60%;
             left: 5px;
             width: 98%;
             padding: 0.3em;
@@ -262,11 +262,10 @@
            
         <div class="tgx_text"> 
             <span class="tgx_text_title tgx_text_bold">
-               CORRE Y CONQUISTA LAS CALLES
+              Un calzado que lleva el correr en las calles al próximo nivel. #PureBOOST Go.
             </span>
             <span class="tgx_text_light tgx_text_small" style="color:black; margin-top: 20px;">
-               <br> El pulso de la ciudad a tus pies. <b>#PureBOOST Go.</b>b<br>
-Un calzado que lleva el correr en las calles al próximo nivel.<b> #PureBOOST Go.</b>
+              
             </span>
 
             <div style="bottom:0px;height: 1px;text-align:left;margin-top:7%">
@@ -283,7 +282,7 @@ Un calzado que lleva el correr en las calles al próximo nivel.<b> #PureBOOST Go
                     </span>
                 </div>
                 <div class="logo">
-                    <img src="https://i.imgur.com/U1PvKPo.png" style="height:30px">
+                    <img src="https://i.imgur.com/WsiyDqu.png" style="height:30px">
                 </div>
             </div>
         </div>
