--- a/ADIDAS/videonew.html
+++ b/ADIDAS/videonew.html
@@ -180,7 +180,7 @@
             float: right;
             height: 30px;
             text-align: center;
-            margin-top: -5px;
+            margin-top: -10px;
             margin-right: -20px
         }
         
@@ -280,7 +280,7 @@
                     </span>
                 </div>
                 <div class="logo">
-                    <img src="https://i.imgur.com/U1PvKPo.png" style="height:30px">
+                    <img src="https://i.imgur.com/WsiyDqu.png" style="height:30px">
                 </div>
             </div>
         </div>
